fixed display issues on firefox,
w/o functionality.

--- a/scss/_media-donor.scss
+++ b/scss/_media-donor.scss
@@ -133,6 +133,17 @@
     #main .general-div .donate .amount .buttons {
         gap: 5px;
         overflow-x: scroll;
+        
+        &::-webkit-scrollbar {
+            display: none;
+          }
+          
+          /* Hide scrollbar for IE, Edge and Firefox */
+           & {
+            -ms-overflow-style: none;  /* IE and Edge */
+            scrollbar-width: none;  /* Firefox */
+          }
+        
 
         p {
             padding: 10px;
